# DemiEngine

./: .editorconfig  .gitignore  1782763155392-ai-friendly-game-engine-plan.md  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  plan.md  steps_to_be_taken_plan.md
.github/workflows/: clean-build-cook-run.yml
android/: settings.gradle
android/app/: build.gradle
docs/: 2d-gameplay.md  architecture.md  capabilities.md  cli.md  compatibility.md  file-formats.md  input-actions.md  prefabs.md  runtime-ui.md  saves-simulation-debugging.md
docs/latex/: README.md  main.aux  main.tex
docs/latex/appendices/: file_reference.tex
docs/latex/chapters/: architecture.tex  build_and_cli.tex  data_formats.tex  hud_and_menus.tex  lua_api.tex  minimal_2d.tex  overview.tex  runtime_systems.tex  saves_and_settings.tex  testing_and_validation.tex
docs/latex/shared/: preamble.tex
examples/animation_3d/: README.md  demi.project.json
examples/animation_3d/scenes/: main.hud.json  main.scene.json
examples/elite_frontier/: demi.project.json
examples/elite_frontier/saves/: commander.save.json
examples/elite_frontier/scenes/: main.hud.json  main.scene.json
examples/elite_frontier/scripts/: main.lua
examples/fighting_game_2d/: demi.project.json
examples/fighting_game_2d/fighters/: basic_fighter.lua
examples/fighting_game_2d/scenes/: arena.scene.json
examples/fighting_game_2d/scripts/: fight.lua
examples/isometric_base_builder/: demi.project.json
examples/isometric_base_builder/replays/: build_and_defend.replay.json
examples/isometric_base_builder/saves/: isometric_base_builder.save.json
examples/isometric_base_builder/scenes/: village.hud.json  village.scene.json
examples/isometric_base_builder/scripts/: game.lua
examples/main_menu_animated/: README.md  demi.project.json
examples/main_menu_animated/scenes/: main.hud.json  main.scene.json
examples/main_menu_animated/scripts/: main_menu.lua
examples/main_menu_gif/: README.md  demi.project.json
examples/main_menu_gif/scenes/: main.hud.json  main.scene.json
examples/minimal_2d/: demi.project.json
examples/minimal_2d/saves/: settings.save.json  smoke.save.json
examples/minimal_2d/scenes/: main.hud.json  main.scene.json  menu.hud.json  platformer.scene.json  spiral.scene.json
examples/minimal_2d/scripts/: game.lua  game_state.lua  level_spiral.lua  main_menu.lua  menu_scene.lua  player.lua  player_config.lua  player_platformer.lua  player_slingshot.lua
examples/minimal_2d_android/: demi.project.json
examples/minimal_2d_android/saves/: settings.save.json  smoke.save.json
examples/minimal_2d_android/scenes/: menu.hud.json  menu.scene.json  platformer.scene.json  spiral.scene.json
examples/minimal_2d_android/scripts/: game.lua  main_menu.lua  network_lobby.lua  network_replication.lua  player.lua  player_colors.lua  player_config.lua  player_platformer.lua
examples/minimal_2d_android_server/: README.md  demi.project.json
examples/minimal_2d_android_server/scenes/: main.scene.json
examples/minimal_2d_android_server/scripts/: matchmaking.lua  server.lua
examples/minimal_2d_networking/: demi.project.json
examples/minimal_2d_networking/saves/: settings.save.json  smoke.save.json
examples/minimal_2d_networking/scenes/: game.hud.json  menu.hud.json  menu.scene.json  platformer.scene.json  spiral.scene.json
examples/minimal_2d_networking/scripts/: game.lua  game_state.lua  main_menu.lua  menu_button.lua  network_replication.lua  player.lua  player_colors.lua  player_config.lua  player_platformer.lua  player_slingshot.lua
examples/minimal_3d/: README.md  demi.project.json
examples/minimal_3d/prefabs/: obstacle.prefab.json  player.prefab.json  position_label.prefab.json
examples/minimal_3d/scenes/: main.hud.json  main.scene.json
examples/minimal_3d/scripts/: player_3d.lua
examples/minimal_voxel/: README.md  demi.project.json
examples/minimal_voxel/scenes/: main.hud.json  main.scene.json
examples/minimal_voxel/scripts/: fly_camera.lua  worldgen.lua
examples/minimal_voxel/tools/: import_pack.lua
examples/saves_simulation_debugging/: demi.project.json
examples/saves_simulation_debugging/replays/: move_and_roll.replay.json
examples/saves_simulation_debugging/saves/: campaign.save.json
examples/saves_simulation_debugging/scenes/: main.hud.json  main.scene.json
examples/saves_simulation_debugging/scripts/: save_probe.lua
examples/ui_showcase/: demi.project.json
examples/ui_showcase/scenes/: main.hud.json  main.scene.json
examples/ui_showcase/scripts/: ui_showcase.lua
examples/ui_showcase/ui/: default.theme.json  en.localization.json
plans/: Phase3.md  Phase4.md
schemas/: asset.schema.json  components.schema.json  hud.schema.json  input-replay.schema.json  prefab.schema.json  project.schema.json  save.schema.json  scene.schema.json
scripts/runtime/demi/: character_controller_2d.lua  command_recognizer.lua  gui_animation.lua  input_buffer.lua
scripts/stubs/: demi.lua
src/android/: main.cpp
src/cli/: AssetCommands.cpp  AssetCommands.h  BuildCommands.cpp  BuildCommands.h  CookCommands.cpp  CookCommands.h  SceneCompositionCommands.cpp  SceneCompositionCommands.h  main.cpp
src/demi/assets/: AssetCooker.cpp  AssetCooker.h  AssetHash.cpp  AssetHash.h  AssetImporter.cpp  AssetImporter.h  AssetPackage.cpp  AssetPackage.h  (+8 more)
src/editor/: main.cpp
src/runtime/: main.cpp
tests/: animation_primitives_tests.cpp  asset_pipeline_tests.cpp  camera2d_tests.cpp  game_save_document_tests.cpp  input_action_tests.cpp  input_replay_tests.cpp  isometric_grid_tests.cpp  lua_scripting_tests.cpp  lua_server_tests.cpp  lua_stub_contract_tests.cpp  network_tests.cpp  physics2d_tests.cpp  physics3d_tests.cpp  prefab_tests.cpp  profiler_hud_layout_tests.cpp  regex_matcher_tests.cpp  renderer3d_batcher_tests.cpp  runtime_profiler_tests.cpp  scene_loader_tests.cpp  simulation_tests.cpp  smoke_tests.cpp  snapshot_replication_tests.cpp  sprite_animation_tests.cpp  tilemap_tests.cpp  transform3d_hierarchy_tests.cpp  ui_tests.cpp  validation_3d_tests.cpp  voxel_tests.cpp
(+462 files in other folders)
